--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+// My common styles
+@import '~normalize.css';
+
+body {
+  font-family: 'Times New Roman', sans-serif;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+li {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+button {
+  border: none;
+  background: transparent;
+  outline: none;
+}
+
+.container {
+  display: none;
+  width: 1140px; /*Обратить внимание при адаптации*/
+  margin: 0 auto;
+}
+.container_active {
+  display: block;
+  width: 1140px; /*Обратить внимание при адаптации*/
+  margin: 0 auto;
+}
+.todo {
+  width: 100%
+}
