done functionality add and remove todo

--- a/src/app/components/confirm/confirm.component.html
+++ b/src/app/components/confirm/confirm.component.html
@@ -1,9 +1,9 @@
-<div class="confirm" id="modal-delete">
+<div [ngClass]="{'confirm': !taskSvc.activeConfirm, 'confirm_active':  taskSvc.activeConfirm}">
   <div class="modal-confirm">
     <div class="modal-confirm__question">Delete task?</div>
     <div class="buttons-block">
-      <div class="button-no">No</div>
-      <div class="button-yes button-active">Yes</div>
+      <div class="button-no" (click)="taskSvc.onNo()">No</div>
+      <div class="button-yes button-active" (click)="this.taskSvc.removeTodo(taskSvc.indexOfComfirm)">Yes</div>
     </div>
   </div>
 </div> <!--конец модального окна вопроса об удалении задачи-->
