--- a/src/app/components/task-container/task-container.component.html
+++ b/src/app/components/task-container/task-container.component.html
@@ -2,8 +2,8 @@
 <app-sort-triggers></app-sort-triggers>
 
 <div class="task-list">
-  <app-task-item ></app-task-item>
-  <h4>
+  <app-task-item [data]="item" [index]="i" *ngFor="let item of items | async; let i = index"></app-task-item>
+  <h4 *ngIf="(items | async)?.length === 0">
     List is empty! 
   </h4>
 </div> 
