--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,9 +1,9 @@
 <div class="current-task current-task_mt">
   <div class="create-data">
-    <!-- <span>{{data.date | date: 'dd.MM.yyyy'}}<br><span>{{data.date | date: 'HH:mm'}}</span></span> -->
+    <span>{{data.date | date: 'dd.MM.yyyy'}}<br><span>{{data.date | date: 'HH:mm'}}</span></span>
   </div>
   <div class="priority">
-    <div class="priority__current">1</div>
+    <div class="priority__current">{{data.prior}}</div>
     <div class="priority__triggers">
       <div class="priority__top" >
         <img src="https://raw.githubusercontent.com/glushach/todo-list/master/arrows/priority-top.png" alt="priority-top">
@@ -13,12 +13,12 @@
       </div>
     </div>
   </div>
-  <div class="task-description">fdhfdshfdshds</div>
+  <div class="task-description">{{data.text}}</div>
 
   <div class="editor-task">
     <div class="icons-editor"></div>
     <div class="icons-checked icons-checked_active" ></div>
-    <div class="icons-delete"></div>
+    <div class="icons-delete" (click)="this.taskSvc.onConfirm(data.id)"></div>
   </div>
   <!-- Модальное окно confirm. Каждому компоненту task-item будет навешено модальное окно -->
   <app-confirm ></app-confirm>
