--- a/src/app/components/alert/alert.component.html
+++ b/src/app/components/alert/alert.component.html
@@ -1,12 +1,11 @@
-<div class="alert ">
+<div class="alert " [ngClass]="{'alert': !alertSvc.alertShow, 'alert_active':  alertSvc.alertShow}">
   <div class="modal-alert"> 
     <div class="modal-confirm__question">Min 1, Max 200 characters!</div>
     <div class="buttons-block">
-      <div class="button-ok" >OK</div>
+      <div class="button-ok" (click)="alertSvc.onOk()">OK</div>
     </div>
   </div>
 </div> <!--конец модального окна alert-->
 
 <!-- alert_active -->
-<!-- [ngClass]="{'alert': !alertSvc.alertShow, 'alert_active':  alertSvc.alertShow}" -->
-<!-- (click)="alertSvc.onOk()" -->
+
