--- a/src/app/components/confirm/confirm.component.html
+++ b/src/app/components/confirm/confirm.component.html
@@ -3,7 +3,7 @@
     <div class="modal-confirm__question">Delete task?</div>
     <div class="buttons-block">
       <div class="button-no" (click)="taskSvc.onNo()">No</div>
-      <div class="button-yes button-active" (click)="this.taskSvc.removeTodo(taskSvc.indexOfComfirm)">Yes</div>
+      <div class="button-yes button-active" (click)="this.taskSvc.removeTodo(taskSvc.idOfComfirm)">Yes</div>
     </div>
   </div>
 </div> <!--конец модального окна вопроса об удалении задачи-->
